GNOME Bugzilla – Bug 156885
eel is not thread safe
Last modified: 2011-09-22 04:16:50 UTC
eel is not thread safe, because in several places the GDK lock is not held while calling GTK+ from a main loop callback. Patch is attached.
Created attachment 33247 [details] [review] fixes thread safety bugs
Created attachment 38997 [details] [review] patch updated for 2.10.0
Thanks for supplying a patch. It is a shame nobody took a look. Is eel head still not thread-safe?
eel as a standalone product is no longer maintained. However, large parts of eel was imported into the eel sub directory in nautilus. Can you please check again whether this issue still happens in nautilus 3.0.2 or upcoming nautilus 3.2.0 and update this report by adding a comment so that the bug can be reassigned to nautilus if it's still valid.
Not relevant anymore for Nautilus.