Fixes thread safety (http://bugzilla.gnome.org/show_bug.cgi?id=156885).

Approved by:	adamw (mentor)